--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <section id="infoSection">
            <div id="div">
                <h4>Hi there!!</h4>
-               <h2>I am Sneha</h2>
+               <h2>I am Rushikesh</h2>
                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam nulla nisi rerum sequi dolorum facilis deleniti fuga dolorem dignissimos tempora.</p>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus dicta beatae molestiae, voluptas doloremque magni voluptates consequuntur error ut, ad eveniet, perspiciatis maiores at asperiores illo id! Consequuntur, possimus, quisquam rerum eius modi tempore iure eum molestias ratione a dicta!</p>
               <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam numquam incidunt impedit ratione alias explicabo tempora culpa deleniti, nam optio?</b>
@@ -159,7 +159,7 @@
         <section>
             copyright &copy
             Reserved All Rights
-            <h4>Kabir Sagi</h4>
+            <h4>Rushikesh Sangle</h4>
         </section>
     </footer>
 
